Enhancements from reviews Ethos API Key changed to type password Hardened Today Classes data in extension Support instruction-events versions 8 and 11 for both lambda GraphQL and node EEDM
Change example lazy load to be the shared TodayClasses

add EXPERIENCE_EXTENSION_ENABLED to extension sample.env

Refactored card types to separate folders

use npx rather than assuming PATH includes ./node_modules/.bin

Improved caching feature

fix class time issue

Update to SDK 4.1.1 (#1)

Changed extension publisher to be blank - requires being set before upload

Handle data load error better

Update versions to 1.0.2

--- a/today-classes-extension/src/common/i18n/en.json
+++ b/today-classes-extension/src/common/i18n/en.json
@@ -2,6 +2,8 @@
     "messages": {
         "Classes.courseAbbrNumberTitle": "{courseAbbreviation} {courseNumber} {courseTitle}",
         "Classes.time": "Retrieve time: {time}",
+        "Classes.contact.administrator": "Contact Your Administrator",
+        "Classes.data.error": "There was an error retrieving your data",
         "Dash.source": "Source",
         "Dash.count": "Count",
         "Dash.average": "Average",
