--- a/api-dashboard/extension/src/i18n/en.json
+++ b/api-dashboard/extension/src/i18n/en.json
@@ -3,7 +3,7 @@
         "Dash.clear": "Clear",
         "Dash.refresh": "Refresh",
         "Dash.source": "Source",
-        "Dash.count": "County",
+        "Dash.count": "Count",
         "Dash.average": "Average",
         "Dash.actions": "Actions"
     }
