Fixing issue for Card Preview Updating to latest SDK

--- a/account-details/extension/src/i18n/en.json
+++ b/account-details/extension/src/i18n/en.json
@@ -12,6 +12,8 @@
         "AccountDetails.transactionDate": "Transaction Date",
         "AccountDetails.description": "Description",
         "AccountDetails.type": "Type",
-        "AccountDetails.amount": "Amount"
+        "AccountDetails.amount": "Amount",
+        "AccountDetails.notConfigured": "The card is not yet configured or configuration is not available except on Step 2 \"Configuration\"",
+        "AccountDetails.noTransactions": "There are no transactions on your account"
     }
 }
