--- a/instructor-classes-lambda/extension/src/i18n/en.json
+++ b/instructor-classes-lambda/extension/src/i18n/en.json
@@ -5,6 +5,7 @@
         "Classes.contact.administrator": "Contact Your Administrator",
         "Classes.data.error": "There was an error retrieving your data",
         "Classes.no.classes": "You have no classes today",
+        "Classes.notConfigured": "The card is not yet configured or configuration is not available except on Step 2 \"Configuration\"",
         "Dash.source": "Source",
         "Dash.count": "Count",
         "Dash.average": "Average",
