--- a/today-classes-graphql/extension/src/i18n/en.json
+++ b/today-classes-graphql/extension/src/i18n/en.json
@@ -4,6 +4,7 @@
         "Classes.time": "Retrieve time: {time}",
         "Classes.contact.administrator": "Contact Your Administrator",
         "Classes.data.error": "There was an error retrieving your data",
-        "Classes.no.classes": "You have no classes today"
+        "Classes.no.classes": "You have no classes today",
+        "Classes.not.configured": "The card is not yet configured or configuration is not available except on Step 2 \"Configuration\""
     }
 }
